added dot config files

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,13 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# spell checker
-/.vscode
+# Excluding pattern goes here
+/legendary/*
+!config.ini
+
+# Directories
+/nvim/dein/
+
+# Spell checker
+/.vscode/
+
