fix wrong path specification

--- a/.config/yt-dlp/audio.conf
+++ b/.config/yt-dlp/audio.conf
@@ -1,8 +1,8 @@
 # YouTube Music
 --retries 5
---batch-file "$HOME/list.txt"
+--batch-file "~/list.txt"
 --format 'bestaudio/bestaudio[ext=m4a]/best'
---path "$HOME/Music"
+--path "~/Music"
 --output '%(channel)s/%(album)s/%(playlist_index)02d %(track)s.%(ext)s'
 --no-mtime
 --ignore-errors
