--- a/.config/yt-dlp/video.conf
+++ b/.config/yt-dlp/video.conf
@@ -1,7 +1,7 @@
 # Various Videos
 --retries 5
---batch-file "$HOME/list.txt"
---path "$HOME/Downloads"
+--batch-file "~/list.txt"
+--path "~/Downloads"
 --output '%(title)s.%(ext)s'
 --no-mtime
 --ignore-errors
