--- a/.config/yt-dlp/yt.conf
+++ b/.config/yt-dlp/yt.conf
@@ -1,7 +1,7 @@
 # YouTube Videos
 --retries 5
---batch-file "$HOME/list.txt"
---path "$HOME/Videos/YouTube"
+--batch-file "~/list.txt"
+--path "~/Videos/YouTube"
 --output '%(channel)s/%(title)s.%(ext)s'
 --no-mtime
 --ignore-errors
