fix font settings for mpv

--- a/.config/mpv.conf
+++ b/.config/mpv.conf
@@ -11,7 +11,8 @@ border=no
 
 # On Screen Display
 osd-on-seek=no
-osd-font='IBM Plex Sans JP'
+osd-font='CaskaydiaCoveNF'
+osd-font='IBMPlexSansJP Bold'
 osd-font-size=75
 
 # Language
