add missing setting for real environment

--- a/.config/mpv.conf
+++ b/.config/mpv.conf
@@ -2,9 +2,18 @@
 volume-max=100.000
 volume=75.000
 
+# ハードウェアアクセラレーション
+hwdec=auto-safe
+
 # Screen
 fullscreen=no
 border=no
+
+# On Screen Display
+osd-on-seek=no
+osd-font='CaskaydiaCoveNF'
+osd-font='IBMPlexSansJP Bold'
+osd-font-size=75
 
 # Language
 alang=en,ja,jp
@@ -27,3 +36,8 @@ audio-channels=auto-safe
 
 # デコード時に使うコアの数。デフォルトは１で、０はオート
 ad-lavc-threads=0
+
+# wasapi exclusive mode
+# run 'mpv --audio-device=help' to check ur audio id
+audio-exclusive=yes
+audio-device='wasapi/{WASAPI-ID-GOES-HERE}'
