update yt-dlp configs

--- a/.config/yt-dlp/audio.conf
+++ b/.config/yt-dlp/audio.conf
@@ -1,8 +1,10 @@
-# YouTube Music
+# Download music from YouTubeMusic. Extension will be webm.
 --retries 5
 --batch-file "~/list.txt"
 --format 'bestaudio/bestaudio[ext=m4a]/best'
---path "~/Music"
+--path "D:/Downloads"
+--path temp:"D:/tmp"
 --output '%(channel)s/%(album)s/%(playlist_index)02d %(track)s.%(ext)s'
 --no-mtime
 --ignore-errors
+--cache-dir "D:/.cache/yt-dlp"
