--- a/.config/yt-dlp/max.conf
+++ b/.config/yt-dlp/max.conf
@@ -1,9 +1,11 @@
-# Various Videos
+# Download video using aria2c with max speed
 --retries 5
 --batch-file "~/list.txt"
---path "~/Downloads"
+--paths home:"D:/Downloads"
+--paths temp:"D:/tmp"
 --output '%(title)s.%(ext)s'
 --no-mtime
 --ignore-errors
+--cache-dir "D:/.cache/yt-dlp"
 --downloader aria2c
 --downloader-args aria2c:"-x16 -j16 -s16 -k1M"
