--- a/.config/yt-dlp/yt.conf
+++ b/.config/yt-dlp/yt.conf
@@ -1,10 +1,12 @@
-# YouTube Videos
+# Download YouTube video
 --retries 5
 --batch-file "~/list.txt"
---path "~/Videos/YouTube"
+--path "D:/Videos/YouTube"
+--path temp:"D:/tmp"
 --output '%(channel)s/%(title)s.%(ext)s'
 --no-mtime
 --ignore-errors
+--cache-dir "D:/.cache/yt-dlp"
 --downloader aria2c
 --downloader-args aria2c:"-x16 -j16 -s16 -k1M"
 --embed-metadata
