update some config files

--- a/.config/yt-dlp/hls.conf
+++ b/.config/yt-dlp/hls.conf
@@ -4,7 +4,7 @@
 --paths home:"D:/Downloads"
 --paths temp:"D:/tmp"
 --cache-dir "D:/.cache/yt-dlp"
---output '%(title)s.%(ext)s'
+--output '%(alt_title, title | unknown)s.%(ext)s'
 --no-mtime
 --ignore-errors
 --concurrent-fragments 8
