--- a/.config/yt-dlp/yt.conf
+++ b/.config/yt-dlp/yt.conf
@@ -3,7 +3,7 @@
 --batch-file "~/list.txt"
 --path "D:/Videos/YouTube"
 --path temp:"D:/tmp"
---output '%(channel)s/%(title)s.%(ext)s'
+--output '%(channel)s/%(title | unknown)s.%(ext)s'
 --no-mtime
 --ignore-errors
 --cache-dir "D:/.cache/yt-dlp"
