--- a/.config/yt-dlp/max.conf
+++ b/.config/yt-dlp/max.conf
@@ -3,7 +3,7 @@
 --batch-file "~/list.txt"
 --paths home:"D:/Downloads"
 --paths temp:"D:/tmp"
---output '%(title)s.%(ext)s'
+--output '%(title | unknown)s.%(ext)s'
 --no-mtime
 --ignore-errors
 --cache-dir "D:/.cache/yt-dlp"
