update output template in yt-dlp config

--- a/.config/yt-dlp/audio.conf
+++ b/.config/yt-dlp/audio.conf
@@ -4,7 +4,12 @@
 --format 'bestaudio/bestaudio[ext=m4a]/best'
 --path "D:/Downloads"
 --path temp:"D:/tmp"
---output '%(channel)s/%(album)s/%(playlist_index)02d %(track)s.%(ext)s'
+--output '%(channel)s/%(album|Unknown)s/%(playlist_index|00)02d %(track)s.%(ext)s'
 --no-mtime
 --ignore-errors
 --cache-dir "D:/.cache/yt-dlp"
+--parse-metadata ":(?P<meta_description>)"
+--parse-metadata ":(?P<meta_synopsis>)"
+--parse-metadata ":(?P<meta_purl>)"
+--parse-metadata ":(?P<meta_comment>)"
+--embed-metadata
