--- a/.config/yt-dlp/hls.conf
+++ b/.config/yt-dlp/hls.conf
@@ -1,10 +1,10 @@
 # Download HLS/DASH video
 --retries 5
 --batch-file "~/list.txt"
---paths home:"D:/Downloads"
+--paths home:"~/home/videos/temp"
 --paths temp:"D:/tmp"
 --cache-dir "D:/.cache/yt-dlp"
---output '%(alt_title, title | unknown)s.%(ext)s'
+--output '%(alt_title,title|Unknown)s.%(ext)s'
 --no-mtime
 --ignore-errors
---concurrent-fragments 8
+--concurrent-fragments 6
