--- a/.config/yt-dlp/safe.conf
+++ b/.config/yt-dlp/safe.conf
@@ -4,7 +4,7 @@
 --paths home:"D:/Downloads"
 --paths temp:"D:/tmp"
 --cache-dir "D:/.cache/yt-dlp"
---output '%(title | unknown)s.%(ext)s'
+--output '%(title,alt_title|Unknown)s.%(ext)s'
 --no-mtime
 --downloader aria2c
 --downloader-args aria2c:"-x6 -j6 -s6 -k4M"
