--- a/.config/yt-dlp/norm.conf
+++ b/.config/yt-dlp/norm.conf
@@ -4,6 +4,6 @@
 --paths home:"D:/Downloads"
 --paths temp:"D:/tmp"
 --cache-dir "D:/.cache/yt-dlp"
---output '%(title | unknown)s.%(ext)s'
+--output '%(title,alt_title|Unknown)s.%(ext)s'
 --no-mtime
 --ignore-errors
