--- a/.config/yt-dlp/yt.conf
+++ b/.config/yt-dlp/yt.conf
@@ -3,10 +3,13 @@
 --batch-file "~/list.txt"
 --path "D:/Videos/YouTube"
 --path temp:"D:/tmp"
---output '%(channel)s/%(title | unknown)s.%(ext)s'
+--output '%(channel)s/%(title)s.%(ext)s'
 --no-mtime
 --ignore-errors
 --cache-dir "D:/.cache/yt-dlp"
 --downloader aria2c
 --downloader-args aria2c:"-x16 -j16 -s16 -k1M"
+--parse-metadata ":(?P<meta_synopsis>)"
+--parse-metadata ":(?P<meta_purl>)"
+--parse-metadata ":(?P<meta_comment>)"
 --embed-metadata
