--- a/.config/yt-dlp/yt.conf
+++ b/.config/yt-dlp/yt.conf
@@ -3,13 +3,19 @@
 --batch-file "~/list.txt"
 --path "D:/Videos/YouTube"
 --path temp:"D:/tmp"
+-f "(bestvideo[vcodec^=av01][height>=1080][fps>30]/bestvideo[vcodec=vp9.2][height>=1080][fps>30]/bestvideo[vcodec=vp9][height>=1080][fps>30]/bestvideo[vcodec^=av01][height>=1080]/bestvideo[vcodec=vp9.2][height>=1080]/bestvideo[vcodec=vp9][height>=1080]/bestvideo[height>=1080]/bestvideo[vcodec^=av01][height>=720][fps>30]/bestvideo[vcodec=vp9.2][height>=720][fps>30]/bestvideo[vcodec=vp9][height>=720][fps>30]/bestvideo[vcodec^=av01][height>=720]/bestvideo[vcodec=vp9.2][height>=720]/bestvideo[vcodec=vp9][height>=720]/bestvideo[height>=720]/bestvideo)+(bestaudio[acodec=opus]/bestaudio)/best"
 --output '%(channel)s/%(title)s.%(ext)s'
+--merge-output-format mkv
 --no-mtime
 --ignore-errors
 --cache-dir "D:/.cache/yt-dlp"
+--download-archive "~/home/backups/yt-dlp/archive.log"
 --downloader aria2c
---downloader-args aria2c:"-x16 -j16 -s16 -k1M"
+--downloader-args aria2c:"-x6 -j6 -s6 -k1M"
 --parse-metadata ":(?P<meta_synopsis>)"
 --parse-metadata ":(?P<meta_purl>)"
 --parse-metadata ":(?P<meta_comment>)"
 --embed-metadata
+--embed-thumbnail
+--convert-thumbnails "webp>jpg"
+--sponsorblock-mark "default"
