modify yt-dlp config and add comment in yt.conf

--- a/.config/yt-dlp/audio.conf
+++ b/.config/yt-dlp/audio.conf
@@ -1,7 +1,8 @@
-# Download music from YouTubeMusic. Extension will be webm.
+# Download music from YouTubeMusic.
 --retries 5
 --batch-file "~/list.txt"
---format 'bestaudio/bestaudio[ext=m4a]/best'
+--format 'bestaudio[acodec=opus]/bestaudio[acodec=aac]/best'
+--remux-video "webm>opus/mp4>m4a/mkv"
 --path "D:/Downloads"
 --path temp:"D:/tmp"
 --output '%(channel)s/%(album|Unknown)s/%(playlist_index|00)02d %(track)s.%(ext)s'
