--- a/.config/yt-dlp/hls.conf
+++ b/.config/yt-dlp/hls.conf
@@ -5,6 +5,9 @@
 --paths temp:"D:/tmp"
 --cache-dir "D:/.cache/yt-dlp"
 --output '%(alt_title,title|Unknown)s.%(ext)s'
+--download-archive "~/home/backups/yt-dlp/archive.log"
 --no-mtime
 --ignore-errors
 --concurrent-fragments 6
+--embed-thumbnail
+--convert-thumbnails "webp>jpg"
